# AlphaLens-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/data/knowledge_base/: note.md
backend/data/knowledge_base/uploads/: policy_note_20260504221536.md
backend/src/alphalens/: __init__.py
backend/src/alphalens/agents/: graph.py  nodes.py  state.py
backend/src/alphalens/api/: deps.py  main.py  middleware.py  rate_limit.py  serve.py
backend/src/alphalens/compliance/: policy.py
backend/src/alphalens/core/: config.py  errors.py  json_safe.py  logging.py
backend/src/alphalens/evaluation/: __init__.py
backend/src/alphalens/infrastructure/: cache.py  (+5 more)
backend/tests/: conftest.py  test_agent_chat.py  test_agent_flow.py  test_approvals.py  test_approvals_repository.py  test_auth.py  test_auth_persistence.py  test_auth_persistence_api.py  test_cache.py  test_chat_domain_router.py  test_compliance.py  test_domain_gate.py  test_feedback.py  test_feedback_recent.py  test_health.py  test_investigations.py  test_knowledge_api.py  test_llm_integration.py  test_macro.py  test_market_data.py  test_memory.py  test_observability.py  test_persistence.py  test_plan_quotas_unit.py  test_plans.py  test_portfolio.py  test_portfolio_tool.py  test_rag_api.py  test_rag_chunking.py  test_rag_ingestion.py  test_rate_limit.py  test_report_schema_and_json.py  test_reports.py  test_risk_tool.py  test_runtime_status.py  test_scenarios.py  test_search.py  test_sec.py  test_speech.py  test_usage.py
(+202 files in other folders)
